crates/swc_ecma_parser/tests/flow/type_guards/invalid/no_anon_func_type_3.js
const f = (x: any): x is true => x is true => x is true => true;
